@@ -94,115 +94,157 @@ void InstrumentOMPruntime (bool locks, ApplicationType *at, BPatch_image *appIma
 		if (!at->get_OpenMP_rte() == ApplicationType::Intel_v11)
 		{
 			wrapRoutine (appImage, "__kmpc_fork_call",
-			  "Extrae_OpenMP_ParRegion_Entry", "Probe_OpenMP_ParRegion_Exit");
+			  "Extrae_OpenMP_ParRegion_Entry",
+			  "Extrae_OpenMP_ParRegion_Exit");
 		}
 
 		wrapRoutine (appImage, "__kmpc_barrier",
-		  "Extrae_OpenMP_Barrier_Entry", "Probe_OpenMP_Barrier_Exit");
+		  "Extrae_OpenMP_Barrier_Entry",
+		  "Extrae_OpenMP_Barrier_Exit");
 		wrapRoutine (appImage, "__kmpc_invoke_task_func",
-		  "Extrae_OpenMP_ParDO_Entry", "Probe_OpenMP_ParDO_Exit");
+		  "Extrae_OpenMP_ParDO_Entry",
+			"Extrae_OpenMP_ParDO_Exit");
 		if (locks)
 		{
 			wrapRoutine (appImage, "__kmpc_set_lock",
-			  "Extrae_OpenMP_Unnamed_Lock_Entry", "Probe_OpenMP_Unnamed_Lock_Exit");
+			  "Extrae_OpenMP_Unnamed_Lock_Entry",
+			  "Extrae_OpenMP_Unnamed_Lock_Exit");
 			wrapRoutine (appImage, "__kmpc_unset_lock",
-			  "Extrae_OpenMP_Unnamed_Unlock_Entry", "Probe_OpenMP_Unnamed_Unlock_Exit");
+			  "Extrae_OpenMP_Unnamed_Unlock_Entry",
+			  "Extrae_OpenMP_Unnamed_Unlock_Exit");
 			wrapRoutine (appImage, "__kmpc_critical",
-			  "Extrae_OpenMP_Named_Lock_Entry", "Probe_OpenMP_Named_Lock_Exit");
+			  "Extrae_OpenMP_Named_Lock_Entry",
+			  "Extrae_OpenMP_Named_Lock_Exit");
 			wrapRoutine (appImage, "__kmpc_end_critical",
-			  "Extrae_OpenMP_Named_Unlock_Entry", "Probe_OpenMP_Named_Unlock_Exit");
+			  "Extrae_OpenMP_Named_Unlock_Entry",
+				"Extrae_OpenMP_Named_Unlock_Exit");
 		}
 	}
 
 	if (at->get_OpenMP_rte() == ApplicationType::IBM_v16)
 	{
 		wrapRoutine (appImage, "_xlsmpParallelDoSetup_TPO",
-		  "Extrae_OpenMP_ParDO_Entry", "Probe_OpenMP_ParDO_Exit");
+		  "Extrae_OpenMP_ParDO_Entry",
+		  "Extrae_OpenMP_ParDO_Exit");
 		wrapRoutine (appImage, "_xlsmpWSDoSetup_TPO",
-		  "Extrae_OpenMP_DO_Entry", "Probe_OpenMP_DO_Exit");
+		  "Extrae_OpenMP_DO_Entry",
+			"Extrae_OpenMP_DO_Exit");
 		wrapRoutine (appImage, "_xlsmpParRegionSetup_TPO",
-		  "Extrae_OpenMP_ParRegion_Entry", "Probe_OpenMP_ParRegion_Exit");
+		  "Extrae_OpenMP_ParRegion_Entry",
+			"Extrae_OpenMP_ParRegion_Exit");
 		wrapRoutine (appImage, "_xlsmpWSSectSetup_TPO",
-		  "Extrae_OpenMP_Section_Entry", "Probe_OpenMP_Section_Exit");
+		  "Extrae_OpenMP_Section_Entry",
+		  "Extrae_OpenMP_Section_Exit");
 		wrapRoutine (appImage, "_xlsmpSingleSetup_TPO",
-		  "Extrae_OpenMP_Single_Entry", "Probe_OpenMP_Single_Exit");
+		  "Extrae_OpenMP_Single_Entry",
+			"Extrae_OpenMP_Single_Exit");
 		wrapRoutine (appImage, "_xlsmpBarrier_TPO",
-		  "Extrae_OpenMP_Barrier_Entry", "Probe_OpenMP_Barrier_Exit");
+		  "Extrae_OpenMP_Barrier_Entry",
+			"Extrae_OpenMP_Barrier_Exit");
 
 		if (locks)
 		{
 			wrapRoutine (appImage, "_xlsmpRelDefaultSLock",
-			  "Extrae_OpenMP_Unnamed_Lock_Entry", "Probe_OpenMP_Unnamed_Unlock_Exit");
+			  "Extrae_OpenMP_Unnamed_Lock_Entry",
+			  "Extrae_OpenMP_Unnamed_Unlock_Exit");
 			wrapRoutine (appImage, "_xlsmpGetDefaultSLock",
-			  "Extrae_OpenMP_Unnamed_Unlock_Entry", "Probe_OpenMP_Unnamed_Lock_Exit");
+			  "Extrae_OpenMP_Unnamed_Unlock_Entry",
+			  "Extrae_OpenMP_Unnamed_Lock_Exit");
 			wrapRoutine (appImage, "_xlsmpRelSLock",
-			  "Extrae_OpenMP_Named_Lock_Entry", "Probe_OpenMP_Named_Unlock_Exit");
+			  "Extrae_OpenMP_Named_Lock_Entry",
+			  "Extrae_OpenMP_Named_Unlock_Exit");
 			wrapRoutine (appImage, "_xlsmpGetSLock",
-			  "Extrae_OpenMP_Named_Unlock_Entry", "Probe_OpenMP_Named_Lock_Exit");
+			  "Extrae_OpenMP_Named_Unlock_Entry",
+			  "Extrae_OpenMP_Named_Lock_Exit");
 		}
 	}
 
 	if (at->get_OpenMP_rte() == ApplicationType::GNU_v42)
 	{
 		wrapRoutine (appImage, "GOMP_parallel_start",
-			"Extrae_OpenMP_ParRegion_Entry","");
+		  "Extrae_OpenMP_ParRegion_Entry","");
 		wrapRoutine (appImage, "GOMP_parallel_sections_start",
 		  "Extrae_OpenMP_ParSections_Entry", "");
 		wrapRoutine (appImage, "GOMP_parallel_end",
-			"", "Extrae_OpenMP_ParRegion_Exit");
+		  "", "Extrae_OpenMP_ParRegion_Exit");
 		wrapRoutine (appImage, "GOMP_sections_start",
-		  "Extrae_OpenMP_Section_Entry", "Probe_OpenMP_Section_Exit");
+		  "Extrae_OpenMP_Section_Entry",
+		  "Extrae_OpenMP_Section_Exit");
 		wrapRoutine (appImage, "GOMP_sections_next",
-		  "Extrae_OpenMP_Work_Entry", "Probe_OpenMP_Work_Exit");
+		  "Extrae_OpenMP_Work_Entry",
+		  "Extrae_OpenMP_Work_Exit");
 		wrapRoutine (appImage, "GOMP_sections_end",
-		  "Extrae_OpenMP_Join_Wait_Entry", "Probe_OpenMP_Join_Wait_Exit");
+		  "Extrae_OpenMP_Join_Wait_Entry",
+		  "Extrae_OpenMP_Join_Wait_Exit");
 		wrapRoutine (appImage, "GOMP_sections_end_nowait",
-		  "Extrae_OpenMP_Join_NoWait_Entry", "Probe_OpenMP_Join_NoWait_Exit");
+		  "Extrae_OpenMP_Join_NoWait_Entry",
+		  "Extrae_OpenMP_Join_NoWait_Exit");
 		wrapRoutine (appImage, "GOMP_loop_end",
-		  "Extrae_OpenMP_Join_Wait_Entry", "Probe_OpenMP_Join_Wait_Exit");
+		  "Extrae_OpenMP_Join_Wait_Entry",
+		  "Extrae_OpenMP_Join_Wait_Exit");
 		wrapRoutine (appImage, "GOMP_loop_end_nowait",
-		  "Extrae_OpenMP_Join_NoWait_Entry", "Probe_OpenMP_Join_NoWait_Exit");
+		  "Extrae_OpenMP_Join_NoWait_Entry",
+		  "Extrae_OpenMP_Join_NoWait_Exit");
 		wrapRoutine (appImage, "GOMP_loop_static_start",
-		  "Extrae_OpenMP_DO_Entry", "Probe_OpenMP_DO_Exit");
+		  "Extrae_OpenMP_DO_Entry",
+		  "Extrae_OpenMP_DO_Exit");
 		wrapRoutine (appImage, "GOMP_loop_dynamic_start",
-		  "Extrae_OpenMP_DO_Entry", "Probe_OpenMP_DO_Exit");
+		  "Extrae_OpenMP_DO_Entry",
+		  "Extrae_OpenMP_DO_Exit");
 		wrapRoutine (appImage, "GOMP_loop_guided_start",
-		  "Extrae_OpenMP_DO_Entry", "Probe_OpenMP_DO_Exit");
+		  "Extrae_OpenMP_DO_Entry",
+		  "Extrae_OpenMP_DO_Exit");
 		wrapRoutine (appImage, "GOMP_loop_runtime_start",
-		  "Extrae_OpenMP_DO_Entry", "Probe_OpenMP_DO_Exit");
+		  "Extrae_OpenMP_DO_Entry",
+		  "Extrae_OpenMP_DO_Exit");
 		wrapRoutine (appImage, "GOMP_parallel_loop_static_start",
-		  "Extrae_OpenMP_ParDO_Entry", "Probe_OpenMP_ParDO_Exit");
+		  "Extrae_OpenMP_ParDO_Entry",
+		  "Extrae_OpenMP_ParDO_Exit");
 		wrapRoutine (appImage, "GOMP_parallel_loop_dynamic_start",
-		  "Extrae_OpenMP_ParDO_Entry", "Probe_OpenMP_ParDO_Exit");
+		  "Extrae_OpenMP_ParDO_Entry",
+		  "Extrae_OpenMP_ParDO_Exit");
 		wrapRoutine (appImage, "GOMP_parallel_loop_guided_start",
-		  "Extrae_OpenMP_ParDO_Entry", "Probe_OpenMP_ParDO_Exit");
+		  "Extrae_OpenMP_ParDO_Entry",
+		  "Extrae_OpenMP_ParDO_Exit");
 		wrapRoutine (appImage, "GOMP_parallel_loop_runtime_start",
-		  "Extrae_OpenMP_ParDO_Entry", "Probe_OpenMP_ParDO_Exit");
+		  "Extrae_OpenMP_ParDO_Entry",
+		  "Extrae_OpenMP_ParDO_Exit");
 		wrapRoutine (appImage, "GOMP_loop_static_next",
-		  "Extrae_OpenMP_Work_Entry", "Probe_OpenMP_Work_Exit");
+		  "Extrae_OpenMP_Work_Entry",
+		  "Extrae_OpenMP_Work_Exit");
 		wrapRoutine (appImage, "GOMP_loop_dynamic_next",
-		  "Extrae_OpenMP_Work_Entry", "Probe_OpenMP_Work_Exit");
+		  "Extrae_OpenMP_Work_Entry",
+		  "Extrae_OpenMP_Work_Exit");
 		wrapRoutine (appImage, "GOMP_loop_guided_next",
-		  "Extrae_OpenMP_Work_Entry", "Probe_OpenMP_Work_Exit");
+		  "Extrae_OpenMP_Work_Entry",
+		  "Extrae_OpenMP_Work_Exit");
 		wrapRoutine (appImage, "GOMP_loop_runtime_next",
-		  "Extrae_OpenMP_Work_Entry", "Probe_OpenMP_Work_Exit");
+		  "Extrae_OpenMP_Work_Entry",
+		  "Extrae_OpenMP_Work_Exit");
 		wrapRoutine (appImage, "GOMP_barrier",
-		  "Extrae_OpenMP_Barrier_Entry", "Probe_OpenMP_Barrier_Exit");
+		  "Extrae_OpenMP_Barrier_Entry",
+		  "Extrae_OpenMP_Barrier_Exit");
 
 		if (locks)
 		{
 			wrapRoutine (appImage, "GOMP_critical_name_start",
-			  "Extrae_OpenMP_Named_Lock_Entry", "Probe_OpenMP_Named_Lock_Exit");
+			  "Extrae_OpenMP_Named_Lock_Entry",
+			  "Extrae_OpenMP_Named_Lock_Exit");
 			wrapRoutine (appImage, "GOMP_critical_name_end",
-			  "Extrae_OpenMP_Named_Unlock_Entry", "Probe_OpenMP_Named_Unlock_Exit");
+			  "Extrae_OpenMP_Named_Unlock_Entry",
+			  "Extrae_OpenMP_Named_Unlock_Exit");
 			wrapRoutine (appImage, "GOMP_critical_start",
-			  "Extrae_OpenMP_Unnamed_Lock_Entry", "Probe_OpenMP_Unnamed_Lock_Exit");
+			  "Extrae_OpenMP_Unnamed_Lock_Entry",
+			  "Extrae_OpenMP_Unnamed_Lock_Exit");
 			wrapRoutine (appImage, "GOMP_critical_end",
-			  "Extrae_OpenMP_Unnamed_Unlock_Entry", "Probe_OpenMP_Unnamed_Unlock_Exit");
+			  "Extrae_OpenMP_Unnamed_Unlock_Entry",
+			  "Extrae_OpenMP_Unnamed_Unlock_Exit");
 			wrapRoutine (appImage, "GOMP_atomic_start",
-			  "Extrae_OpenMP_Unnamed_Lock_Entry", "Probe_OpenMP_Unnamed_Lock_Exit");
+			  "Extrae_OpenMP_Unnamed_Lock_Entry",
+			  "Extrae_OpenMP_Unnamed_Lock_Exit");
 			wrapRoutine (appImage, "GOMP_atomic_end",
-			  "Extrae_OpenMP_Unnamed_Unlock_Entry", "Probe_OpenMP_Unnamed_Unlock_Exit");
+			  "Extrae_OpenMP_Unnamed_Unlock_Entry",
+			  "Extrae_OpenMP_Unnamed_Unlock_Exit");
 		}
 	}
 }
